--- a/source/photo.html
+++ b/source/photo.html
@@ -10,6 +10,12 @@
     <header class="page-header">
       <div class="page-header__block container">
         <a class="page-header__link" href="index.html">
+          <picture>
+            <source srcset="img/logo-pink-white-desktop.svg" media="(min-width: 1200px)">
+            <source srcset="img/logo-pink-white-tablet.svg" media="(min-width: 660px)">
+            <img src="img/logo-pink-white-mobile.svg">
+          </picture>
+          <!--
           <svg class="page-header__logo" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
             <g>
               <path fill="#FFFFFF" d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064 c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428 c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z"/>
@@ -18,6 +24,7 @@
               <path fill="#FFFFFF" d="M56.3,1.288C56.3,0.58,56.879,0,57.556,0c0.708,0,1.287,0.58,1.287,1.288v12.331L71.689,0.451 C71.979,0.193,72.269,0,72.688,0c0.676,0,1.224,0.612,1.224,1.256c0,0.354-0.161,0.644-0.419,0.901l-7.984,7.92l8.564,10.561 c0.225,0.29,0.354,0.547,0.354,0.934c0,0.676-0.579,1.288-1.287,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.403-10.463l-4.862,4.861 v4.894c0,0.708-0.579,1.288-1.287,1.288c-0.677,0-1.256-0.58-1.256-1.288V1.288z"/>
             </g>
           </svg>
+        -->
         </a>
         <nav class="nav">
           <button class="nav__toggle" type="button">
@@ -68,10 +75,9 @@
         </p>
         <article class="gallery__post gallery__post--background">
           <picture>
-            <source srcset="img/panorama-mobile@1x.jpg" media="(max-width: 320px)">
-            <source srcset="img/panorama-tablet@1x.jpg" media="(max-width: 660px)">
             <source srcset="img/panorama-desktop@1x.jpg" media="(min-width: 1200px)">
-            <img src="img/panorama-desktop@1x.jpg">
+            <source srcset="img/panorama-tablet@1x.jpg" media="(min-width: 660px)">
+            <img src="img/panorama-mobile@1x.jpg">
           </picture>
           <div class="container">
             <div class="gallery__block ">
@@ -86,10 +92,9 @@
         <div class="gallery__grid container">
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-car-mobile@1x.jpg" media="(max-width: 320px)">
-              <source srcset="img/photo-car-tablet@1x.jpg" media="(max-width: 660px)">
               <source srcset="img/photo-car-desktop@1x.jpg" media="(min-width: 1200px)">
-              <img src="img/photo-car-desktop@1x.jpg">
+              <source srcset="img/photo-car-tablet@1x.jpg" media="(min-width: 660px)">
+              <img src="img/photo-car-mobile@1x.jpg">
             </picture>
             <div>
               <b class="gallery__user">Левон</b>
@@ -101,10 +106,9 @@
           </article>
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-drumset-mobile@1x.jpg" media="(max-width: 320px)">
-              <source srcset="img/photo-drumset-tablet@1x.jpg" media="(max-width: 660px)">
               <source srcset="img/photo-drumset-desktop@1x.jpg" media="(min-width: 1200px)">
-              <img src="img/photo-drumset-desktop@1x.jpg">
+              <source srcset="img/photo-drumset-tablet@1x.jpg" media="(min-width: 660px)">
+              <img src="img/photo-drumset-mobile@1x.jpg">
             </picture>
             <div>
               <b class="gallery__user">Антон</b>
@@ -116,10 +120,9 @@
           </article>
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-window-mobile@1x.jpg" media="(max-width: 320px)">
-              <source srcset="img/photo-window-tablet@1x.jpg" media="(max-width: 660px)">
               <source srcset="img/photo-window-desktop@1x.jpg" media="(min-width: 1200px)">
-              <img src="img/photo-window-desktop@1x.jpg">
+              <source srcset="img/photo-window-tablet@1x.jpg" media="(min-width: 660px)">
+              <img src="img/photo-window-mobile@1x.jpg">
             </picture>
             <div>
               <b class="gallery__user">Борис</b>
@@ -131,10 +134,9 @@
           </article>
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-fair-mobile@1x.jpg" media="(max-width: 320px)">
-              <source srcset="img/photo-fair-tablet@1x.jpg" media="(max-width: 660px)">
               <source srcset="img/photo-fair-desktop@1x.jpg" media="(min-width: 1200px)">
-              <img src="img/photo-fair-desktop@1x.jpg">
+              <source srcset="img/photo-fair-tablet@1x.jpg" media="(min-width: 660px)">
+              <img src="img/photo-fair-mobile@1x.jpg">
             </picture>
             <div>
               <b class="gallery__user">Сергей</b>
@@ -146,10 +148,9 @@
           </article>
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-pov-mobile@1x.jpg" media="(max-width: 320px)">
-              <source srcset="img/photo-pov-tablet@1x.jpg" media="(max-width: 660px)">
               <source srcset="img/photo-pov-desktop@1x.jpg" media="(min-width: 1200px)">
-              <img src="img/photo-pov-desktop@1x.jpg">
+              <source srcset="img/photo-pov-tablet@1x.jpg" media="(min-width: 660px)">
+              <img src="img/photo-pov-mobile@1x.jpg">
             </picture>
             <div>
               <b class="gallery__user">Максим</b>
@@ -161,10 +162,9 @@
           </article>
           <article class="gallery__post">
             <picture>
-              <source srcset="img/photo-wing-mobile@1x.jpg" media="(max-width: 320px)">
-              <source srcset="img/photo-wing-tablet@1x.jpg" media="(max-width: 660px)">
               <source srcset="img/photo-wing-desktop@1x.jpg" media="(min-width: 1200px)">
-              <img src="img/photo-wing-desktop@1x.jpg">
+              <source srcset="img/photo-wing-tablet@1x.jpg" media="(min-width: 660px)">
+              <img src="img/photo-wing-mobile@1x.jpg">
             </picture>
             <div>
               <b class="gallery__user">Надежда</b>
